Robotics/.metadata/.plugins/org.eclipse.cdt.ui/Team-3341-PowerUp.build.log
16:31:56 **** Incremental Build of configuration Debug for project Team-3341-PowerUp ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\ankbh/wpilib/cpp/current/include" "-IC:\\Users\\ankbh\\Robotics\\Team-3341-PowerUp\\src" "-IC:\\Users\\ankbh/wpilib/user/cpp/include" -O0 -Og -g3 -Wall -c -fmessage-length=0 -pthread -o "src\\Commands\\TankDrive.o" "..\\src\\Commands\\TankDrive.cpp" 
In file included from ..\src\Commands\../OI.h:4:0,
                 from ..\src\Commands\../CommandBase.h:10,
                 from ..\src\Commands\TankDrive.h:4,
                 from ..\src\Commands\TankDrive.cpp:1:
..\src\Commands\../Commands/AcquireCrate.h:7:41: error: expected class-name before '{' token
 class AcquireCrate : public CommandBase {
                                         ^
In file included from ..\src\Commands\../OI.h:5:0,
                 from ..\src\Commands\../CommandBase.h:10,
                 from ..\src\Commands\TankDrive.h:4,
                 from ..\src\Commands\TankDrive.cpp:1:
..\src\Commands\../Commands/ReleaseCrate.h:7:41: error: expected class-name before '{' token
 class ReleaseCrate : public CommandBase {
                                         ^
In file included from ..\src\Commands\../OI.h:6:0,
                 from ..\src\Commands\../CommandBase.h:10,
                 from ..\src\Commands\TankDrive.h:4,
                 from ..\src\Commands\TankDrive.cpp:1:
..\src\Commands\../Commands/StopCatcher.h:7:40: error: expected class-name before '{' token
 class StopCatcher : public CommandBase {
                                        ^
..\src\Commands\TankDrive.cpp: In member function 'virtual void TankDrive::Execute()':
..\src\Commands\TankDrive.cpp:20:9: warning: unused variable 'average' [-Wunused-variable]
  double average = (drive->leftDistance() + drive->rightDistance()) / 2;
         ^

16:31:58 Build Finished (took 2s.374ms)

